--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -15,8 +15,8 @@
 }
 
 .button {
-  padding: 5px;
-  background-color: #f0f0f0;
+  padding: 2px 7px;
+  background-color: white;
   font-size: 17px;
   border-color: inherit;
   border: inherit;
